# data2day-workshop

./: .gitignore  Dockerfile  README.md  docker-compose.yaml
announcement-producer/: Dockerfile  README.md  announcement_producer.py  docker-compose.yaml  job.yaml  main.py  produce.py  pyproject.toml
announcement-producer/connect/: elastic-announcement-sink.json
announcement-producer/connect/elasticsearch/: elastic-avro-corporate-sink.json  elastic-avro-person-sink.json  elastic-proto-corporate-sink.json
announcement-producer/connect/neo4j/: neo4j-avro-person-to-corporate-sink.json  neo4j-proto-person-to-corporate-sink.json
connectors/: README.md
connectors/elasticsearch/: elastic-announcement-sink.json  elastic-avro-person-sink.json  elastic-proto-corporate-sink.json  elastic-proto-person-sink.json
working-with-kafkastreams/: README.md  build.gradle.kts  gradle.properties  settings.gradle.kts  values-avro.yaml
working-with-kafkastreams/.run/: AvroInformationExtractor.run.xml  ProtoInformationExtractor.run.xml
working-with-kafkastreams/src/main/java/com/bakdata/data2day/: AvroInformationExtractor.java  ProtoInformationExtractor.java  Utils.java
working-with-kafkastreams/src/main/java/com/bakdata/data2day/extractor/: JsonExtractor.java  JsonExtractorException.java
working-with-kafkastreams/src/main/resources/: log4j2.xml
working-with-kafkastreams/src/test/java/com/bakdata/data2day/: AvroInformationExtractorTest.java  ProtoInformationExtractorTest.java
working-with-kafkastreams/src/test/resources/: exception_test.json  test.json
(+7 files in other folders)
