[tool.poetry]
name = "announcement-producer"
version = "0.1.0"
description = ""
authors = ["Ramin Gharib <ramin.gharib@bakdata.com>"]

[tool.poetry.dependencies]
python = "^3.9"
confluent-kafka = "1.9.2"
requests = "2.28.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
